# tile-compiler

./: .gitignore  README.md  pyproject.toml
docs/: FUTURE-INTEGRATION.md
examples/: benchmark.py  c4_optimize.py  ttt_compile.py
tests/: conftest.py  test_analyze.py  test_compiler.py  test_factorize.py  test_field.py  test_hierarchical.py  test_jit.py  test_new_features.py  test_optimizer.py  test_regressions.py  test_serialization.py  test_v03.py
tile_compiler/: __init__.py  analyze.py  compiler.py  config.py  distill.py  factorize.py  field.py  games.py  gpu.py  hierarchical.py  jit.py  optimizer.py  protocol.py
tile_compiler.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
