[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tile-compiler"
version = "0.1.0"
description = "Compile game strategies into fast lookup tables via tile-based field training."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "SuperInstance" }]
keywords = ["game-ai", "tile-field", "compiler", "lookup-table", "optimization"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment :: Board Games",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
gpu = ["torch>=2.0"]
dev = ["pytest>=7.0", "pytest-cov"]

[tool.setuptools.packages.find]
include = ["tile_compiler*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
